--- a/TestAutoValue/.classpath
+++ b/TestAutoValue/.classpath
@@ -34,5 +34,14 @@
 			<attribute name="test" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="/usr/local/google/home/sbrytskyy/.m2/repository/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2.jar" sourcepath="/usr/local/google/home/sbrytskyy/.m2/repository/com/google/code/findbugs/jsr305/3.0.2/jsr305-3.0.2-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="maven.groupId" value="com.google.code.findbugs"/>
+			<attribute name="maven.artifactId" value="jsr305"/>
+			<attribute name="maven.version" value="3.0.2"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
